--- a/rush.yaml
+++ b/rush.yaml
@@ -28224,7 +28224,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    Your opponent has a face-up Level 7 or higher monster on their field and you have 2 face-up non-Level 3 Dragon Type monsters on your field.
+    Your opponent has a face-up Level 7 or higher monster and you have 2 face-up non-Level 3 Dragon Type monsters on your field.
   de:
   es:
   fr:
@@ -28283,9 +28283,6 @@ sets:
     set_name: Strongest Battle Deck Yuamu - Come Forth! High Tech Dragon!
     rarities:
     - Common
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 717239
 ---
 konami_id: 16305
@@ -31620,7 +31617,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    You have a face-up "Summoned Skull" or a face-up Level 7 or higher Fiend Type Normal Monster on your field.
+    You have "Summoned Skull" or a Level 7 or higher Fiend Type Normal Monster face-up on your field.
   de:
   es:
   fr:
@@ -32418,7 +32415,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When your opponent Normal or Special Summons a Level 6 or higher monster(s) face-up while you have a face-up "Summoned Skull" or a face-up Level 7 or higher Fiend Type Normal Monster on your field.
+    When your opponent Normal or Special Summons a Level 6 or higher monster(s) face-up while you have "Summoned Skull" or a Level 7 or higher Fiend Type Normal Monster face-up on your field.
   de:
   es:
   fr:
@@ -43009,7 +43006,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    A face-up Field Spell Card is on the field the turn you Normal Summoned this card.
+    You Normal Summoned this card this turn and a face-up Field Spell Card is on the field.
   de:
   es:
   fr:
@@ -49177,7 +49174,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    You have "Umi" or "Big Umi" face-up on your field and you have a face-up Fish/Sea Serpent/Thunder/Aqua Type Normal Monster on your field.
+    You have "Umi" or "Big Umi" and a Fish/Sea Serpent/Thunder/Aqua Type Normal Monster face-up on your field.
   de:
   es:
   fr:
@@ -82031,7 +82028,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    Your opponent has 4 or less cards in their hand and you have 2 face-up non-Level 3 Psychic Type monsters on your field the turn you Normal Summoned this card.
+    You Normal Summoned this card this turn, your opponent has 4 or less cards in their hand, and you have 2 face-up non-Level 3 Psychic Type monsters on your field.
   de:
   es:
   fr:
@@ -92226,7 +92223,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    The only monsters in your Graveyard are High Dragon Type and/or Dragon Type monsters the turn you Normal Summoned this card.
+    You Normal Summoned this card this turn and the only monsters in your Graveyard are High Dragon Type and/or Dragon Type monsters.
   de:
   es:
   fr:
@@ -97892,7 +97889,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    Your opponent has a monster on their field the turn you Normal Summoned this card.
+    You Normal Summoned this card this turn and your opponent has a monster on their field.
   de:
   es:
   fr:
@@ -98796,7 +98793,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Place 1 Level 4 or lower Normal Monster or 1 Equip Spell Card from your Graveyard on top of your Deck. Then, if you placed a Legend monster or "Helmet of the Master Craftsman", you can draw 1 card.
+    Place 1 Level 4 or lower Normal Monster or 1 Equip Spell Card from your Graveyard on top of your Deck. Then, if you placed a Legend monster or "Helmet of the Master Craftsman" by this effect, you can draw 1 card.
   de:
   es:
   fr:
@@ -98989,7 +98986,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    You have "Trap Hole" in your Graveyard the turn you Normal Summoned this card.
+    You Normal Summoned this card this turn and you have "Trap Hole" in your Graveyard.
   de:
   es:
   fr:
@@ -102781,7 +102778,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    You have "Celeb Rose Magician" or an Equip Spell Card in your Graveyard the turn you Normal Summoned this card.
+    You Normal Summoned this card this turn and you have "Celeb Rose Magician" or an Equip Spell Card in your Graveyard.
   de:
   es:
   fr:
@@ -117083,7 +117080,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    You have 10 or more cards in your Deck the turn you Normal Summoned this card.
+    You Normal Summoned this card this turn and you have 10 or more cards in your Deck.
   de:
   es:
   fr:
