--- a/data/cards/71089030.yaml
+++ b/data/cards/71089030.yaml
@@ -5,7 +5,7 @@ name:
   de:
   es:
   fr:
-  it:
+  it: Prigione Terrestre
   pt:
   ja: <ruby>地<rt>じ</rt></ruby><ruby>縛<rt>ばく</rt></ruby><ruby>牢<rt>ろう</rt></ruby>
   ja_romaji: Jibakurō
