--- a/data/cards/19544412.yaml
+++ b/data/cards/19544412.yaml
@@ -5,7 +5,7 @@ name:
   de:
   es:
   fr:
-  it:
+  it: Annunciatore sul Ring
   pt:
   ja: <ruby>選<rt>せん</rt></ruby><ruby>手<rt>しゅ</rt></ruby><ruby>入<rt>にゅう</rt></ruby><ruby>場<rt>じょう</rt></ruby>アナウンス
   ja_romaji: Senshu Nyūjō Anaunsu
