--- a/data/cards/45716579.yaml
+++ b/data/cards/45716579.yaml
@@ -5,7 +5,7 @@ name:
   de:
   es:
   fr:
-  it:
+  it: Servitore Terrestre Geo Kraken
   pt:
   ja: <ruby>地<rt>じ</rt></ruby><ruby>縛<rt>ばく</rt></ruby><ruby>戒<rt>かい</rt></ruby><ruby>隷<rt>れい</rt></ruby> ジオクラーケン
   ja_romaji: Jibakukairei Jiokurāken
