--- a/data/cards/46939151.yaml
+++ b/data/cards/46939151.yaml
@@ -5,7 +5,7 @@ name:
   de:
   es:
   fr:
-  it:
+  it: Prigioniero Terrestre Custode del Suolo
   pt:
   ja: <ruby>地<rt>じ</rt></ruby><ruby>縛<rt>ばく</rt></ruby><ruby>囚<rt>しゅう</rt></ruby><ruby>人<rt>じん</rt></ruby> グランド・キーパー
   ja_romaji: Jibakushūjin Gurando Kīpā
