--- a/data/cards/59712426.yaml
+++ b/data/cards/59712426.yaml
@@ -5,7 +5,7 @@ name:
   de:
   es:
   fr:
-  it:
+  it: Energia Arcana XV - Il Demone
   pt:
   ja: アルカナフォース<ruby>ⅩⅤ<rt>フィフティーン</rt></ruby>－<ruby>ＴＨＥ<rt>ザ</rt></ruby> <ruby>ＤＥＶＩＬ<rt>デビル</rt></ruby>
   ja_romaji: Arukana Fōsu Fifutīn - Za Debiru
