--- a/data/cards/84808313.yaml
+++ b/data/cards/84808313.yaml
@@ -8,7 +8,7 @@ name:
   it: Pillola dell'Evoluzione Gigante
   pt: Pílula de Grande Evolução
   ja: <ruby>大<rt>だい</rt></ruby><ruby>進<rt>しん</rt></ruby><ruby>化<rt>か</rt></ruby><ruby>薬<rt>やく</rt></ruby>
-  ja_romaji: Daishinka Yaku
+  ja_romaji: Daishinkayaku
   ko: 대진화약
   ko_rr:
   zh-TW:
