--- a/data/cards/03103067.yaml
+++ b/data/cards/03103067.yaml
@@ -5,7 +5,7 @@ name:
   de:
   es:
   fr:
-  it:
+  it: Armatura dall'Attacco Guidato
   pt:
   ja: <ruby>攻<rt>こう</rt></ruby><ruby>撃<rt>げき</rt></ruby><ruby>誘<rt>ゆう</rt></ruby><ruby>導<rt>どう</rt></ruby>アーマー
   ja_romaji: Kōgeki Yūdō Āmā
