--- a/data/cards/85758066.yaml
+++ b/data/cards/85758066.yaml
@@ -5,7 +5,7 @@ name:
   de:
   es:
   fr:
-  it:
+  it: Specchio Magico Deformante
   pt:
   ja: <ruby>機<rt>き</rt></ruby><ruby>械<rt>かい</rt></ruby>じかけのマジックミラー
   ja_romaji: Kikaijikake no Majikku Mirā
