--- a/rush.yaml
+++ b/rush.yaml
@@ -121480,6 +121480,400 @@ yugipedia_page_id: 1021590
 ---
 konami_id:
 name:
+  en: Fiddlebadour
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: フィドルバドゥール
+  ja_romaji: Fidorubadūru
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Send 1 WIND Attribute Psychic Type monster from your hand to the Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Add 1 "Psyquip Fusion" or 1 Equip Spell Card from your Graveyard to your hand.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Psychic / Effect
+attribute: WIND
+level: 1
+atk: 100
+def: 0
+series:
+- Shaman Bandit
+images:
+- index: 1
+  image: Fiddlebadour-RDKP15-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP15-JP012
+    set_name: Red Reboot of Darkness
+    rarities:
+    - Common
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1022685
+---
+konami_id:
+name:
+  en: Vibra Brigand
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ヴィブラ・ブリガンド
+  ja_romaji: Vibura Burigando
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Your opponent has a face-up Level 7 or higher monster on their field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Send the top 2 cards of your Deck to the Graveyard. If an Equip Spell Card(s) is among the cards sent, you can draw 1 card.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Psychic / Effect
+attribute: WIND
+level: 2
+atk: 200
+def: 200
+series:
+- Shaman Bandit
+images:
+- index: 1
+  image: VibraBrigand-RDKP15-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP15-JP013
+    set_name: Red Reboot of Darkness
+    rarities:
+    - Common
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1022686
+---
+konami_id:
+name:
+  en: Plandolin
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: プランドリン
+  ja_romaji:
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Pay 100 LP.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Excavate the top 3 cards of your Deck. You can add up to 2 excavated "Fusion" and/or "Psyquip Fusion" to your hand. Shuffle the remaining cards into the Deck.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Psychic / Effect
+attribute: WIND
+level: 3
+atk: 1100
+def: 400
+series:
+- Shaman Bandit
+images:
+- index: 1
+  image: Plandolin-RDKP15-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP15-JP014
+    set_name: Red Reboot of Darkness
+    rarities:
+    - Super Rare
+    - Secret Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1022687
+---
+konami_id:
+name:
+  en: Psyquip Fusion
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: サイクイップ・フュージョン
+  ja_romaji: Saikuippu Fyūjon
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    None
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Fusion Summon by sending face-up Psychic Type monsters from your field to the Graveyard as material. Then, if you have a WIND Attribute monster in your Graveyard, you can add 1 Equip Spell Card from your Graveyard to your hand.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Spell
+property: Normal
+series:
+- Fusion
+- Shaman Bandit
+images:
+- index: 1
+  image: PsyquipFusion-RDKP15-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP15-JP051
+    set_name: Red Reboot of Darkness
+    rarities:
+    - Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1022688
+---
+konami_id:
+name:
+  en: Bluegrass High Stealer
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ブルーグラス・ハイスティーラー
+  ja_romaji:
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    If you have a face-up Spell Card on your field, send the top card of your Deck to the Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Return 1 Spell/Trap Card from the field to the owner's hand. Then, you can add 1 "Fiddlebadour" from your Graveyard to your hand.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Psychic / Fusion / Effect
+attribute: WIND
+level: 7
+atk: 2500
+def: 1200
+materials:
+  en: |-
+    "Bluegrass Stealer" + "Fiddlebadour"
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+series:
+- Shaman Bandit
+images:
+- index: 1
+  image: BluegrassHighStealer-RDKP15-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP15-JP041
+    set_name: Red Reboot of Darkness
+    rarities:
+    - Common
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1022690
+---
+konami_id:
+name:
+  en: Bandiva the Ballistic Battle Ballad
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>瞬<rt>しゅん</rt></ruby><ruby>苛<rt>か</rt></ruby><ruby>闘<rt>とう</rt></ruby><ruby>奏<rt>そう</rt></ruby>のバンディーヴァ
+  ja_romaji: Shunkatōsō no Bandīva
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    None
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Draw 1 card. Then, this card gains ATK equal to [the total number of cards in both players' hands] x 500 until the end of your opponent's next turn. Then, if you have exactly 1 card in your hand, you can destroy 1 card on your opponent's field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Psychic / Fusion / Effect
+attribute: WIND
+level: 9
+atk: 3000
+def: 2100
+materials:
+  en: |-
+    "Bandijo of the Battle Ballad" + "Fiddlebadour"
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+series:
+- Shaman Bandit
+images:
+- index: 1
+  image: BandivatheBallisticBattleBallad-RDKP15-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP15-JP042
+    set_name: Red Reboot of Darkness
+    rarities:
+    - Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1022691
+---
+konami_id:
+name:
   en: Time Wizard
   de:
   es:
