--- a/data/cards/13070280.yaml
+++ b/data/cards/13070280.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 19420
 password: 13070280
 name:
   en: Play of the Tistina
@@ -64,6 +64,6 @@ sets:
     rarities:
     - Common
 limit_regulation:
-  tcg:
+  tcg: Unlimited
   ocg: Not yet released
 yugipedia_page_id: 1019289
