--- a/data/cards/25919316.yaml
+++ b/data/cards/25919316.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 19414
 password: 25919316
 name:
   en: Pitknight Filly
@@ -74,6 +74,6 @@ sets:
     rarities:
     - Common
 limit_regulation:
-  tcg:
+  tcg: Unlimited
   ocg: Not yet released
 yugipedia_page_id: 1019288
