--- a/data/cards/43502497.yaml
+++ b/data/cards/43502497.yaml
@@ -1,5 +1,5 @@
-konami_id:
-password:
+konami_id: 19716
+password: 43502497
 name:
   en: Pendulum Witch
   de:
@@ -21,7 +21,8 @@ text:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカード名の①のモンスター効果は１ターンに１度しか使用できない。①：このカードが召喚・Ｐ召喚した場合、自分のＰゾーンのカード１枚を対象として発動できる。そのカードとこのカードを破壊し、デッキからレベル４以下のＰモンスター１体を手札に加える。②：モンスターゾーンのこのカードが破壊された場合に発動できる。このカードを自分のＰゾーンに置く。
   ko:
   zh-TW:
   zh-CN:
@@ -40,7 +41,8 @@ pendulum_effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカード名のＰ効果は１ターンに１度しか使用できない。①：このカードがＰゾーンに存在する状態で、自分フィールドの表側表示の融合・Ｓ・Ｘモンスターが戦闘または相手の効果で破壊された場合に発動できる。元々の種族がその内の１体と同じとなるＰモンスター１体をデッキからＥＸデッキに表側で加える。
   ko:
   zh-TW:
   zh-CN:
@@ -48,7 +50,7 @@ series:
 - Pendulum
 images:
 - index: 1
-  image: PendulumWitch-VJMP-JP-OP.png
+  image: PendulumWitch-VJMP-JP-UR.png
 sets:
   ja:
   - set_number: VJMP-JP244
@@ -57,7 +59,7 @@ sets:
     - Ultra Rare
 limit_regulation:
   tcg: Not yet released
-  ocg: Not yet released
+  ocg: Unlimited
 is_translation_unofficial:
   name:
     en: true
