--- a/data/cards/50281477.yaml
+++ b/data/cards/50281477.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 19418
 password: 50281477
 name:
   en: Tainted of the Tistina
@@ -73,6 +73,6 @@ sets:
     - Ultra Rare
     - Quarter Century Secret Rare
 limit_regulation:
-  tcg:
+  tcg: Unlimited
   ocg: Not yet released
 yugipedia_page_id: 1019304
