--- a/data/cards/87676171.yaml
+++ b/data/cards/87676171.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 19419
 password: 87676171
 name:
   en: Tistina, the Divinity that Defies Darkness
@@ -80,6 +80,6 @@ sets:
     - Ultra Rare
     - Quarter Century Secret Rare
 limit_regulation:
-  tcg:
+  tcg: Unlimited
   ocg: Not yet released
 yugipedia_page_id: 1019301
