--- a/data/cards/25131968.yaml
+++ b/data/cards/25131968.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 19411
 password: 25131968
 name:
   en: Ken the Warrior Dragon
@@ -66,6 +66,6 @@ sets:
     rarities:
     - Common
 limit_regulation:
-  tcg:
+  tcg: Unlimited
   ocg: Not yet released
 yugipedia_page_id: 1019290
