--- a/data/cards/51033014.yaml
+++ b/data/cards/51033014.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 19415
 password: 51033014
 name:
   en: Wattsychic Fighting Porter
@@ -64,6 +64,6 @@ sets:
     rarities:
     - Common
 limit_regulation:
-  tcg:
+  tcg: Unlimited
   ocg: Not yet released
 yugipedia_page_id: 1019292
