--- a/data/cards/52126602.yaml
+++ b/data/cards/52126602.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 19412
 password: 52126602
 name:
   en: Gen the Diamond Tiger
@@ -66,6 +66,6 @@ sets:
     rarities:
     - Common
 limit_regulation:
-  tcg:
+  tcg: Unlimited
   ocg: Not yet released
 yugipedia_page_id: 1019293
