--- a/data/cards/86553594.yaml
+++ b/data/cards/86553594.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 19422
 password: 86553594
 name:
   en: Discordance of the Tistina
@@ -82,6 +82,6 @@ sets:
     rarities:
     - Common
 limit_regulation:
-  tcg:
+  tcg: Unlimited
   ocg: Not yet released
 yugipedia_page_id: 1019295
