--- a/data/cards/87498729.yaml
+++ b/data/cards/87498729.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 19416
 password: 87498729
 name:
   en: Fallen of the Tistina
@@ -69,6 +69,6 @@ sets:
     rarities:
     - Common
 limit_regulation:
-  tcg:
+  tcg: Unlimited
   ocg: Not yet released
 yugipedia_page_id: 1019294
