--- a/data/cards/98520301.yaml
+++ b/data/cards/98520301.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 19413
 password: 98520301
 name:
   en: Asset Mountis
@@ -66,6 +66,6 @@ sets:
     rarities:
     - Common
 limit_regulation:
-  tcg:
+  tcg: Unlimited
   ocg: Not yet released
 yugipedia_page_id: 1019291
