--- a/rush.yaml
+++ b/rush.yaml
@@ -33023,8 +33023,6 @@ sets:
     rarities:
     - Secret Rare
 is_translation_unofficial:
-  name:
-    en: true
   text:
     en: true
 yugipedia_page_id: 716065
@@ -121611,7 +121609,7 @@ name:
   it:
   pt:
   ja: プランドリン
-  ja_romaji:
+  ja_romaji: Purandorin
   ko:
   ko_rr:
   zh-TW:
@@ -121733,7 +121731,7 @@ name:
   it:
   pt:
   ja: ブルーグラス・ハイスティーラー
-  ja_romaji:
+  ja_romaji: Burūgurasu Hai Sutīrā
   ko:
   ko_rr:
   zh-TW:
