--- a/data/rush/yugipedia1022685.yaml
+++ b/data/rush/yugipedia1022685.yaml
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    手札のモンスター（風属性／サイキック族）１体を墓地へ送って発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分の墓地の「サイクイップ・フュージョン」または装備魔法カード１枚を選んで手札に加える。
   ko:
   zh-TW:
   zh-CN:
