--- a/data/rush/yugipedia1022686.yaml
+++ b/data/rush/yugipedia1022686.yaml
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    相手フィールドに表側表示モンスター（レベル７以上）がいる場合に発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分のデッキの上からカード２枚を墓地へ送る。その中に装備魔法カードがあった場合、さらに自分は１枚ドローできる。
   ko:
   zh-TW:
   zh-CN:
