--- a/data/rush/yugipedia1022690.yaml
+++ b/data/rush/yugipedia1022690.yaml
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分フィールドに表側表示の魔法カードがある場合、デッキの一番上のカードを墓地へ送って発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分または相手フィールドの魔法・罠カード１枚を選んで持ち主の手札に戻す。その後、自分の墓地の「フィドルバドゥール」１体を選んで手札に加える事ができる。
   ko:
   zh-TW:
   zh-CN:
@@ -50,7 +52,8 @@ materials:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    「ブルーグラス・スティーラー」＋「フィドルバドゥール」
   ko:
   zh-TW:
   zh-CN:
