--- a/data/rush/yugipedia1022691.yaml
+++ b/data/rush/yugipedia1022691.yaml
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    なし
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分は１枚ドローする。その後、このカードの攻撃力は次の相手ターン終了時まで、［お互いの手札の数の合計］×５００アップする。自分の手札が１枚の場合、さらに相手フィールドのカード１枚を選んで破壊できる。
   ko:
   zh-TW:
   zh-CN:
@@ -50,7 +52,8 @@ materials:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    「闘奏のバンディージョ」＋「フィドルバドゥール」
   ko:
   zh-TW:
   zh-CN:
