--- a/rush.yaml
+++ b/rush.yaml
@@ -121498,7 +121498,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    手札のモンスター（風属性／サイキック族）１体を墓地へ送って発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -121510,7 +121511,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分の墓地の「サイクイップ・フュージョン」または装備魔法カード１枚を選んで手札に加える。
   ko:
   zh-TW:
   zh-CN:
@@ -121560,7 +121562,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    相手フィールドに表側表示モンスター（レベル７以上）がいる場合に発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -121572,7 +121575,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分のデッキの上からカード２枚を墓地へ送る。その中に装備魔法カードがあった場合、さらに自分は１枚ドローできる。
   ko:
   zh-TW:
   zh-CN:
@@ -121744,7 +121748,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分フィールドに表側表示の魔法カードがある場合、デッキの一番上のカードを墓地へ送って発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -121756,7 +121761,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分または相手フィールドの魔法・罠カード１枚を選んで持ち主の手札に戻す。その後、自分の墓地の「フィドルバドゥール」１体を選んで手札に加える事ができる。
   ko:
   zh-TW:
   zh-CN:
@@ -121774,7 +121780,8 @@ materials:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    「ブルーグラス・スティーラー」＋「フィドルバドゥール」
   ko:
   zh-TW:
   zh-CN:
@@ -121818,7 +121825,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    なし
   ko:
   zh-TW:
   zh-CN:
@@ -121830,7 +121838,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分は１枚ドローする。その後、このカードの攻撃力は次の相手ターン終了時まで、［お互いの手札の数の合計］×５００アップする。自分の手札が１枚の場合、さらに相手フィールドのカード１枚を選んで破壊できる。
   ko:
   zh-TW:
   zh-CN:
@@ -121848,7 +121857,8 @@ materials:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    「闘奏のバンディージョ」＋「フィドルバドゥール」
   ko:
   zh-TW:
   zh-CN:
