--- a/data/rush/19125.yaml
+++ b/data/rush/19125.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Send the top card of your Deck to the Graveyard. Then, if you sent a Wyrm Type monster to the Graveyard by this effect, you can add 1 "Demolition Soldier Hell Met" or Level 8 Wyrm Type monster from your Graveyard to your hand.
+    Send the top card of your Deck to the Graveyard. Then, if you sent a Wyrm Type monster to the Graveyard by this effect, you can add 1 "Demolition Soldier Hell Met" or 1 Level 8 Wyrm Type monster from your Graveyard to your hand.
   de:
   es:
   fr:
