--- a/data/rush/yugipedia1022688.yaml
+++ b/data/rush/yugipedia1022688.yaml
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    なし
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分フィールドの表側表示モンスター（サイキック族）を素材として墓地へ送り、フュージョン召喚する。その後、自分の墓地にモンスター（風属性）がいる場合、自分の墓地の装備魔法カード１枚を選んで手札に加える事ができる。
   ko:
   zh-TW:
   zh-CN:
