--- a/data/cards/yugipedia1022703.yaml
+++ b/data/cards/yugipedia1022703.yaml
@@ -32,7 +32,7 @@ attribute: EARTH
 level: 5
 atk: 2100
 def: 1850
-materials: 2 Beast monsters
+materials: 2 Beast-Type monsters
 images:
 - index: 1
   image: MasterofHam-PHNI-JP-OP.png
