--- a/data/rush/yugipedia1022687.yaml
+++ b/data/rush/yugipedia1022687.yaml
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    １００ＬＰを払って発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分のデッキの上からカードを３枚めくり、お互いに確認する。自分はめくったカードの中から「フュージョン」「サイクイップ・フュージョン」を合計２枚まで選んで手札に加える事ができる。残りのカードをデッキに戻す。
   ko:
   zh-TW:
   zh-CN:
