--- a/rush.yaml
+++ b/rush.yaml
@@ -109384,7 +109384,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Send the top card of your Deck to the Graveyard. Then, if you sent a Wyrm Type monster to the Graveyard by this effect, you can add 1 "Demolition Soldier Hell Met" or Level 8 Wyrm Type monster from your Graveyard to your hand.
+    Send the top card of your Deck to the Graveyard. Then, if you sent a Wyrm Type monster to the Graveyard by this effect, you can add 1 "Demolition Soldier Hell Met" or 1 Level 8 Wyrm Type monster from your Graveyard to your hand.
   de:
   es:
   fr:
@@ -119633,7 +119633,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Set up to 2 "Thousand Knives", "Dark Magic Attack", and/or "Dark Resonance Burst" from your Graveyard in your Spell & Trap Zone. Then, you take no battle damage from your opponent's Level 9 or lower monsters' attacks this turn.
+    Set up to 2 "Thousand Knives"/"Dark Magic Attack"/"Dark Resonance Burst" from your Graveyard in your Spell & Trap Zone. Then, you take no battle damage from your opponent's Level 9 or lower monsters' attacks this turn.
   de:
   es:
   fr:
@@ -121626,7 +121626,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    １００ＬＰを払って発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -121638,7 +121639,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分のデッキの上からカードを３枚めくり、お互いに確認する。自分はめくったカードの中から「フュージョン」「サイクイップ・フュージョン」を合計２枚まで選んで手札に加える事ができる。残りのカードをデッキに戻す。
   ko:
   zh-TW:
   zh-CN:
@@ -121689,7 +121691,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    なし
   ko:
   zh-TW:
   zh-CN:
@@ -121701,7 +121704,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分フィールドの表側表示モンスター（サイキック族）を素材として墓地へ送り、フュージョン召喚する。その後、自分の墓地にモンスター（風属性）がいる場合、自分の墓地の装備魔法カード１枚を選んで手札に加える事ができる。
   ko:
   zh-TW:
   zh-CN:
