--- a/data/rush/16779.yaml
+++ b/data/rush/16779.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Set 1 "Ruler's Current", 1 "Ruler's Deadly Duel", or 1 "Ruler's Dance" from your Graveyard in your Spell & Trap Zone.
+    Set 1 "Ruler's Current"/"Ruler's Deadly Duel"/"Ruler's Dance" from your Graveyard in your Spell & Trap Zone.
   de:
   es:
   fr:
