--- a/data/rush/18378.yaml
+++ b/data/rush/18378.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    Shuffle 4 Spellcaster and/or Dragon Type monsters from your Graveyard into the Deck.
+    Shuffle 4 Spellcaster Type and/or Dragon Type monsters from your Graveyard into the Deck.
   de:
   es:
   fr:
