--- a/data/rush/19327.yaml
+++ b/data/rush/19327.yaml
@@ -27,7 +27,7 @@ summoning_condition:
   zh-CN:
 requirement:
   en: |-
-    Send 3 DARK Attribute Galaxy Type monsters from your hand to the Graveyard, or have a face-up DARK Attribute Galaxy Type Fusion Monster on your field.
+    Send 3 DARK Attribute Galaxy Type monsters from your hand to the Graveyard, or you have a face-up DARK Attribute Galaxy Type Fusion Monster on your field.
   de:
   es:
   fr:
