--- a/data/rush/17269.yaml
+++ b/data/rush/17269.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    The only face-up monsters on your opponent's field are EARTH, WATER, or FIRE Attribute.
+    The only face-up monsters on your opponent's field are EARTH/WATER/FIRE Attribute.
   de:
   es:
   fr:
