--- a/rush.yaml
+++ b/rush.yaml
@@ -41828,7 +41828,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon 1 Level 5 or 6 Dragon Type Normal Monster from your hand or Graveyard face-up to your field. Then, if you have "Sportsdragon Keeper" face-up on your field, you can add 1 "Sportsdragon Striker" or 1 "Sportsdragon Defender" from your Graveyard to your hand.
+    Special Summon 1 Level 5 or 6 Dragon Type Normal Monster from your hand or your Graveyard face-up to your field. Then, if you have "Sportsdragon Keeper" face-up on your field, you can add 1 "Sportsdragon Striker" or 1 "Sportsdragon Defender" from your Graveyard to your hand.
   de:
   es:
   fr:
@@ -41958,7 +41958,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Set 1 "Ruler's Current", 1 "Ruler's Deadly Duel", or 1 "Ruler's Dance" from your Graveyard in your Spell & Trap Zone.
+    Set 1 "Ruler's Current"/"Ruler's Deadly Duel"/"Ruler's Dance" from your Graveyard in your Spell & Trap Zone.
   de:
   es:
   fr:
@@ -42140,7 +42140,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon 1 "Yamiruler the Dark Delayer", 1 "Kimeruler the Dark Raider", or 1 "Semeruler the Dark Summoner" from your Graveyard to your field in face-up Defense Position.
+    Special Summon 1 "Yamiruler the Dark Delayer"/"Kimeruler the Dark Raider"/"Semeruler the Dark Summoner" from your Graveyard to your field in face-up Defense Position.
   de:
   es:
   fr:
@@ -45925,7 +45925,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Draw 2 cards. Then, place 1 card from your hand on the bottom of the Deck.
+    Draw 2 cards. Then, place 1 card from your hand on the bottom of your Deck.
   de:
   es:
   fr:
@@ -54834,7 +54834,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    The only face-up monsters on your opponent's field are EARTH, WATER, or FIRE Attribute.
+    The only face-up monsters on your opponent's field are EARTH/WATER/FIRE Attribute.
   de:
   es:
   fr:
@@ -78103,7 +78103,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When an opponent's monster declares an attack while you have a Machine or Thunder Type monster in your Graveyard.
+    When an opponent's monster declares an attack while you have a Machine Type or Thunder Type monster in your Graveyard.
   de:
   es:
   fr:
@@ -88996,7 +88996,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    Shuffle 4 Spellcaster and/or Dragon Type monsters from your Graveyard into the Deck.
+    Shuffle 4 Spellcaster Type and/or Dragon Type monsters from your Graveyard into the Deck.
   de:
   es:
   fr:
@@ -98255,6 +98255,8 @@ effect:
   zh-CN:
 card_type: Spell
 property: Normal
+series:
+- Polymerization
 legend: true
 images:
 - index: 1
@@ -100351,7 +100353,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Until the end of your opponent's next turn, this card cannot be destroyed by battle. Then, you can add 1 Level 10 Maximum Monster, 1 "Super Electromagnetic Maximum", or 1 "B.B.B. - Beast Brave Brandish" from your Graveyard to your hand.
+    Until the end of your opponent's next turn, this card cannot be destroyed by battle. Then, you can add 1 Level 10 Maximum Monster/"Super Electromagnetic Maximum"/"B.B.B. - Beast Brave Brandish" from your Graveyard to your hand.
   de:
   es:
   fr:
@@ -110691,7 +110693,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon 1 "Jointech Arc Scorpio", 1 "Jointech Spike Centipede", or 1 "Jointech Rex" from your Graveyard to your field in face-up Defense Position. You cannot activate the effects of non-Machine Type monsters this turn.
+    Special Summon 1 "Jointech Arc Scorpio"/"Jointech Spike Centipede"/"Jointech Rex" from your Graveyard to your field in face-up Defense Position. You cannot activate the effects of non-Machine Type monsters this turn.
   de:
   es:
   fr:
@@ -111293,7 +111295,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Add 1 Level 7 or 10 Pyro or Thunder Type monster from your Graveyard to your hand. Then, you can add 1 "Chemicalize Structure Force" from your Graveyard to your hand.
+    Add 1 Level 7 or 10 Pyro Type or Thunder Type monster from your Graveyard to your hand. Then, you can add 1 "Chemicalize Structure Force" from your Graveyard to your hand.
   de:
   es:
   fr:
@@ -111357,7 +111359,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Add 1 Level 5 or 10 Pyro or Aqua Type monster from your Graveyard to your hand. Then, you can add 1 "Chemicalize Structure Force" from your Graveyard to your hand.
+    Add 1 Level 5 or 10 Pyro Type or Aqua Type monster from your Graveyard to your hand. Then, you can add 1 "Chemicalize Structure Force" from your Graveyard to your hand.
   de:
   es:
   fr:
@@ -113908,7 +113910,7 @@ summoning_condition:
   zh-CN:
 requirement:
   en: |-
-    Send 3 DARK Attribute Galaxy Type monsters from your hand to the Graveyard, or have a face-up DARK Attribute Galaxy Type Fusion Monster on your field.
+    Send 3 DARK Attribute Galaxy Type monsters from your hand to the Graveyard, or you have a face-up DARK Attribute Galaxy Type Fusion Monster on your field.
   de:
   es:
   fr:
@@ -121214,7 +121216,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    If you have 10 or more cards in your Deck and you have a face-up Level 5 or higher Spellcaster Type monster on your field, shuffle 3 Spellcaster Type monsters with the same Attribute from your Graveyard into the Deck.
+    If you have 10 or more cards in your Deck and have a face-up Level 5 or higher Spellcaster Type monster on your field, shuffle 3 Spellcaster Type monsters with the same Attribute from your Graveyard into the Deck.
   de:
   es:
   fr:
