--- a/data/rush/17718.yaml
+++ b/data/rush/17718.yaml
@@ -49,6 +49,7 @@ def: 0
 images:
 - index: 1
   image: SpecterofHeavensEnd-RDMRP1-JP-SR.png
+  illustration: SpecterofHeavensEnd-G002-JP-VG-artwork.png
 - index: 2
   image: SpecterofHeavensEnd-RDS23P-JP-OP.png
 sets:
