--- a/data/rush/yugipedia1022769.yaml
+++ b/data/rush/yugipedia1022769.yaml
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分フィールドに同じ種族の表側表示モンスターが２体以上いる場合に発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分は１枚ドローする。その後、自分フィールドの同じ属性の表側表示モンスター２体を選んでその攻撃力をターン終了時まで４００アップできる。
   ko:
   zh-TW:
   zh-CN:
