--- a/data/rush/15450.yaml
+++ b/data/rush/15450.yaml
@@ -50,6 +50,8 @@ effect:
   zh-CN:
 card_type: Spell
 property: Normal
+series:
+- Dark Magician
 images:
 - index: 1
   image: ThousandKnives-RDMRP2-JP-C.png
