--- a/data/rush/17209.yaml
+++ b/data/rush/17209.yaml
@@ -42,9 +42,14 @@ effect:
   zh-CN:
 card_type: Spell
 property: Normal
+series:
+- Dark Magician
 images:
 - index: 1
   image: DarkResonanceBurst-RDGRP1-JP-SR.png
+  illustration: DarkResonanceBurst-G002-JP-VG-artwork.png
+- index: '1.1'
+  image: DarkResonanceBurst-RDGRP1-KR-SR.png
 sets:
   ja:
   - set_number: RD/GRP1-JP027
