--- a/data/rush/18692.yaml
+++ b/data/rush/18692.yaml
@@ -46,6 +46,8 @@ attribute: DARK
 level: 2
 atk: 700
 def: 700
+series:
+- Dark Magician
 images:
 - index: 1
   image: MagiciansCurtain-RDLGP1-JP-SR.png
