--- a/data/rush/19595.yaml
+++ b/data/rush/19595.yaml
@@ -60,6 +60,8 @@ attribute: DARK
 level: 7
 atk: 2500
 def: 1500
+series:
+- Dark Magician
 images:
 - index: 1
   image: SwordawnMagician-RDMRP2-JP-UR.png
