--- a/data/rush/19596.yaml
+++ b/data/rush/19596.yaml
@@ -46,6 +46,8 @@ attribute: DARK
 level: 7
 atk: 2500
 def: 1400
+series:
+- Dark Magician
 images:
 - index: 1
   image: ObsidianMagicalSoldier-RDMRP2-JP-SR.png
