--- a/data/rush/19597.yaml
+++ b/data/rush/19597.yaml
@@ -44,6 +44,8 @@ attribute: DARK
 level: 3
 atk: 900
 def: 700
+series:
+- Dark Magician
 images:
 - index: 1
   image: MatureDarkMagician-RDMRP2-JP-C.png
