--- a/data/rush/19598.yaml
+++ b/data/rush/19598.yaml
@@ -40,6 +40,8 @@ effect:
   zh-CN:
 card_type: Spell
 property: Normal
+series:
+- Dark Magician
 images:
 - index: 1
   image: JeweloftheDarkMagician-RDMRP2-JP-SR.png
