--- a/data/rush/19601.yaml
+++ b/data/rush/19601.yaml
@@ -40,6 +40,8 @@ effect:
   zh-CN:
 card_type: Trap
 property: Normal
+series:
+- Dark Magician
 images:
 - index: 1
   image: MagiciansSense-RDMRP2-JP-C.png
