--- a/rush.yaml
+++ b/rush.yaml
@@ -6419,6 +6419,8 @@ attribute: DARK
 level: 7
 atk: 2500
 def: 2100
+series:
+- Dark Magician
 legend: true
 images:
 - index: 1
@@ -9357,6 +9359,8 @@ effect:
   zh-CN:
 card_type: Spell
 property: Normal
+series:
+- Dark Magician
 images:
 - index: 1
   image: ThousandKnives-RDMRP2-JP-C.png
@@ -9435,6 +9439,7 @@ effect:
 card_type: Spell
 property: Normal
 series:
+- Dark Magician
 - Signature move
 images:
 - index: 1
@@ -32729,6 +32734,8 @@ attribute: DARK
 level: 6
 atk: 2000
 def: 1700
+series:
+- Dark Magician
 images:
 - index: 1
   image: DarkMagicianGirl-RDG001-JP-ScR.png
@@ -53472,9 +53479,14 @@ effect:
   zh-CN:
 card_type: Spell
 property: Normal
+series:
+- Dark Magician
 images:
 - index: 1
   image: DarkResonanceBurst-RDGRP1-JP-SR.png
+  illustration: DarkResonanceBurst-G002-JP-VG-artwork.png
+- index: '1.1'
+  image: DarkResonanceBurst-RDGRP1-KR-SR.png
 sets:
   ja:
   - set_number: RD/GRP1-JP027
@@ -97585,6 +97597,8 @@ attribute: DARK
 level: 2
 atk: 700
 def: 700
+series:
+- Dark Magician
 images:
 - index: 1
   image: MagiciansCurtain-RDLGP1-JP-SR.png
@@ -119290,6 +119304,8 @@ attribute: DARK
 level: 7
 atk: 2500
 def: 1500
+series:
+- Dark Magician
 images:
 - index: 1
   image: SwordawnMagician-RDMRP2-JP-UR.png
@@ -119355,6 +119371,8 @@ attribute: DARK
 level: 7
 atk: 2500
 def: 1400
+series:
+- Dark Magician
 images:
 - index: 1
   image: ObsidianMagicalSoldier-RDMRP2-JP-SR.png
@@ -119417,6 +119435,8 @@ attribute: DARK
 level: 3
 atk: 900
 def: 700
+series:
+- Dark Magician
 images:
 - index: 1
   image: MatureDarkMagician-RDMRP2-JP-C.png
@@ -119475,6 +119495,8 @@ effect:
   zh-CN:
 card_type: Spell
 property: Normal
+series:
+- Dark Magician
 images:
 - index: 1
   image: JeweloftheDarkMagician-RDMRP2-JP-SR.png
@@ -119533,6 +119555,8 @@ effect:
   zh-CN:
 card_type: Spell
 property: Normal
+series:
+- Dark Magician
 images:
 - index: 1
   image: SpellbookRejection-RDMRP2-JP-C.png
@@ -119591,6 +119615,8 @@ effect:
   zh-CN:
 card_type: Spell
 property: Normal
+series:
+- Dark Magician
 images:
 - index: 1
   image: SpellExtraction-RDMRP2-JP-C.png
@@ -119649,6 +119675,8 @@ effect:
   zh-CN:
 card_type: Trap
 property: Normal
+series:
+- Dark Magician
 images:
 - index: 1
   image: MagiciansSense-RDMRP2-JP-C.png
