--- a/data/rush/18940.yaml
+++ b/data/rush/18940.yaml
@@ -51,6 +51,8 @@ series:
 images:
 - index: 1
   image: CelebRoseWitch-RDKP13-JP-SR.png
+- index: 2
+  image: CelebRoseWitch-RDBDG6-JP-OP.png
 sets:
   ja:
   - set_number: RD/KP13-JP011
