--- a/rush.yaml
+++ b/rush.yaml
@@ -53675,7 +53675,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon 1 Level 7 Normal Monster from your hand or Graveyard face-up to your field. This turn, the monster Special Summoned by this effect gains 700 ATK and cannot be destroyed by your opponent's Trap Card effects.
+    Special Summon 1 Level 7 Normal Monster from your hand or your Graveyard face-up to your field. This turn, the monster Special Summoned by this effect gains 700 ATK, and cannot be destroyed by your opponent's Trap Card effects.
   de:
   es:
   fr:
@@ -102976,6 +102976,8 @@ series:
 images:
 - index: 1
   image: CelebRoseWitch-RDKP13-JP-SR.png
+- index: 2
+  image: CelebRoseWitch-RDBDG6-JP-OP.png
 sets:
   ja:
   - set_number: RD/KP13-JP011
@@ -121974,6 +121976,67 @@ is_translation_unofficial:
   text:
     en: true
 yugipedia_page_id: 1022769
+---
+konami_id:
+name:
+  en: Skysavior Wish
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>蒼<rt>そう</rt></ruby><ruby>救<rt>きゅう</rt></ruby>の<ruby>願<rt>ねが</rt></ruby>い
+  ja_romaji: Sōkyū no Negai
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    When your opponent Normal or Special Summons a monster, place 1 WATER Attribute Warrior Type monster and 1 Fairy Type monster from your Graveyard on top of your Deck in any order.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: |-
+    相手がモンスターを召喚・特殊召喚した時、自分の墓地のモンスター（水属性／戦士族）１体とモンスター（天使族）１体を好きな順番でデッキの上に戻して発動できる。
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Place 1 monster from your opponent's field on the bottom of the owner's Deck. Then, you can Set 1 "Skysavior Watch" or 1 "Fusion" from your Graveyard in your Spell & Trap Zone.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: |-
+    相手フィールドのモンスター１体を選んで持ち主のデッキの下に戻す。その後、自分の墓地の「蒼救の照覧」または「フュージョン」１枚を選んで自分の魔法＆罠ゾーンにセットできる。
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Trap
+property: Normal
+series:
+- Skysavior
+images:
+- index: 1
+  image: SkysaviorWish-RDKP15-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP15-JP064
+    set_name: Red Reboot of Darkness
+    rarities:
+    - Super Rare
+    - Secret Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1022787
 ---
 konami_id:
 name:
