--- a/data/rush/18283.yaml
+++ b/data/rush/18283.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    Equip this card to 1 face-up monster on your field whose original Type is Psychic.
+    Equip this card to 1 face-up monster on your field whose original Type is Psychic Type.
   de:
   es:
   fr:
