--- a/rush.yaml
+++ b/rush.yaml
@@ -51853,7 +51853,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When an opponent's monster declares an attack targeting your face-up Fish or Sea Serpent Type monster, shuffle 1 "Umi" or 1 "Big Umi" from your Graveyard into the Deck.
+    When an opponent's monster declares an attack targeting your face-up Fish Type or Sea Serpent Type monster, shuffle 1 "Umi" or 1 "Big Umi" from your Graveyard into the Deck.
   de:
   es:
   fr:
@@ -57644,7 +57644,7 @@ effect_types:
 - Multi-Choice
 effect:
   en: |-
-    ● Special Summon 1 Level 8 or lower Warrior or Fairy Type monster from your Graveyard face-up to your field.
+    ● Special Summon 1 Level 8 or lower Warrior Type or Fairy Type monster from your Graveyard face-up to your field.
     ● Shuffle monsters from your opponent's Graveyard into the Deck, up to [the number of monsters with 0 ATK in your Graveyard].
   de:
   es:
@@ -84144,7 +84144,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    Equip this card to 1 face-up monster on your field whose original Type is Psychic.
+    Equip this card to 1 face-up monster on your field whose original Type is Psychic Type.
   de:
   es:
   fr:
@@ -106297,7 +106297,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    Equip this card to 1 face-up Magical Knight or Spellcaster Type monster on your field.
+    Equip this card to 1 face-up Magical Knight Type or Spellcaster Type monster on your field.
   de:
   es:
   fr:
