--- a/data/cards/54591086.yaml
+++ b/data/cards/54591086.yaml
@@ -8,7 +8,7 @@ name:
   it: Cannone Virus
   pt: Canhão Vírus
   ja: <ruby>魔<rt>ま</rt></ruby><ruby>法<rt>ほう</rt></ruby><ruby>除<rt>じょ</rt></ruby><ruby>去<rt>きょ</rt></ruby><ruby>細<rt>さい</rt></ruby><ruby>菌<rt>きん</rt></ruby><ruby>兵<rt>へい</rt></ruby><ruby>器<rt>き</rt></ruby>
-  ja_romaji: Mahō Jokyo Saikin Heiki
+  ja_romaji: Mahō Jokyo Saikinheiki
   ko: 마법 제거 세균 병기
   ko_rr: Mabeop Jegeo Segyun Byeonggi
   zh-TW:
