--- a/data/rush/yugipedia1022810.yaml
+++ b/data/rush/yugipedia1022810.yaml
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    なし
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    相手のデッキの上からカード３枚を墓地へ送る。その中にモンスターがいた場合、さらに相手フィールドの裏側表示のカードを［この効果で墓地へ送られたモンスターの数］まで選んで破壊できる。その後、［この効果で破壊したカードの数］×５００ダメージを相手に与える。
   ko:
   zh-TW:
   zh-CN:
@@ -50,7 +52,8 @@ materials:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    「幻壊竜バクハムート」＋「ダークネス・ファントマイト」
   ko:
   zh-TW:
   zh-CN:
