--- a/rush.yaml
+++ b/rush.yaml
@@ -122060,7 +122060,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    なし
   ko:
   zh-TW:
   zh-CN:
@@ -122072,7 +122073,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    相手のデッキの上からカード３枚を墓地へ送る。その中にモンスターがいた場合、さらに相手フィールドの裏側表示のカードを［この効果で墓地へ送られたモンスターの数］まで選んで破壊できる。その後、［この効果で破壊したカードの数］×５００ダメージを相手に与える。
   ko:
   zh-TW:
   zh-CN:
@@ -122090,7 +122092,8 @@ materials:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    「幻壊竜バクハムート」＋「ダークネス・ファントマイト」
   ko:
   zh-TW:
   zh-CN:
@@ -122136,7 +122139,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分の墓地のモンスター（幻竜族）２体をデッキに戻して発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -122148,7 +122152,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    相手フィールドの表側表示モンスター（レベル９以下）１体を選んで裏側守備表示にする。その後、相手は自身のデッキの上からカードを３枚めくり、お互いに確認する。相手はめくったカードを好きな順番でデッキの上に戻す。
   ko:
   zh-TW:
   zh-CN:
