--- a/data/rush/15665.yaml
+++ b/data/rush/15665.yaml
@@ -43,7 +43,7 @@ effect:
     Aggiungi 1 mostro di Tipo Demone di Livello 6 o superiore dal tuo Cimitero alla tua mano. Non puoi attaccare direttamente in questo turno.
   pt:
   ja: |-
-    自分の墓地のモンスター（レベル６以上／悪魔族）１体を選んで手札に加える。このターン、自分は直接攻撃できない。
+    自分の墓地のモンスター（レベル６以上／悪魔族）１体を選んで手札に加える。このターン、自分はモンスターで直接攻撃できない。
   ko: |-
     자신 묘지의 몬스터(레벨 6 이상 / 악마족) 1장을 고르고 패에 넣는다. 이 턴에, 자신은 직접 공격할 수 없다.
   zh-TW:
