--- a/data/rush/18333.yaml
+++ b/data/rush/18333.yaml
@@ -27,14 +27,14 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Send the top 2 cards of each player's Deck to the Graveyard, and inflict damage to your opponent equal to [the number of monsters sent to the Graveyard by this effect] x 100. Then, if you have a face-up Equip Spell Card on your field and you inflicted damage to your opponent by this effect, you can change 1 Attack Position monster on your opponent's field to face-up Defense Position.
+    Send the top 2 cards of each player's Deck to the Graveyard, and inflict damage to your opponent equal to [the number of monsters sent to the Graveyard by this effect] x 100. Then, if you have a face-up Equip Spell Card on your field, you can change 1 Attack Position monster on your opponent's field to face-up Defense Position.
   de:
   es:
   fr:
   it:
   pt:
   ja: |-
-    お互いのデッキの上からカードを２枚ずつ墓地へ送り、［この効果で墓地へ送られたモンスターの数］×１００ダメージを相手に与える。自分フィールドに表側表示の装備魔法カードがあり、この効果で相手にダメージを与えた場合、さらに相手フィールドの攻撃表示モンスター１体を選んで表側守備表示にできる。
+    お互いのデッキの上からカードを２枚ずつ墓地へ送り、［この効果で墓地へ送られたモンスターの数］×１００ダメージを相手に与える。その後、自分フィールドに表側表示の装備魔法カードがある場合、相手フィールドの攻撃表示モンスター１体を選んで表側守備表示にできる。
   ko:
   zh-TW:
   zh-CN:
