--- a/data/rush/18932.yaml
+++ b/data/rush/18932.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Send the top card of your Deck to the Graveyard. Then, if you sent a Level 4 or lower LIGHT Attribute Galaxy Type Normal Monster to the Graveyard by this effect, you can Special Summon that monster face-up to your field. Then, inflict damage to your opponent equal to [the original ATK of the monster Special Summoned by this effect].
+    Send the top card of your Deck to the Graveyard. Then, if you sent a Level 4 or lower LIGHT Attribute Galaxy Type Normal Monster to the Graveyard by this effect, you can Special Summon that monster face-up to your field. Then, inflict damage to your opponent equal to [its original ATK].
   de:
   es:
   fr:
