--- a/data/rush/16584.yaml
+++ b/data/rush/16584.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon 1 Level 5 or higher Dinosaur Type monster from your hand face-up to your field. The monster Special Summoned by this effect gains ATK equal to [the original Level of the monster sent to the Graveyard to meet the requirement] x 100 until the end of this turn.
+    Special Summon 1 Level 5 or higher Dinosaur Type monster from your hand face-up to your field. It gains ATK equal to [the original Level of the monster sent to the Graveyard to meet the requirement] x 100 until the end of this turn.
   de:
   es:
   fr:
