--- a/data/rush/16983.yaml
+++ b/data/rush/16983.yaml
@@ -35,7 +35,7 @@ effect:
   it:
   pt:
   ja: |-
-    相手フィールドのモンスターを２体まで選んで表示形式を変更する（攻撃表示は表側守備表示に、守備表示は表側攻撃表示にする）。この効果で表示形式を変更した場合、さらに自分フィールドの表側表示モンスター１体を選んで表示形式を変更できる。
+    相手フィールドのモンスターを２体まで選んで表示形式を変更する（攻撃表示は表側守備表示に、守備表示は表側攻撃表示にする）。その後、自分フィールドの表側表示モンスター１体を選んで表示形式を変更できる。
   ko: |-
     상대 필드의 몬스터를 2장까지 고르고 표시 형식을 변경한다(공격 표시는 앞면 수비 표시로, 수비 표시는 앞면 공격 표시로 한다). 이 효과로 표시 형식을 변경했을 경우, 추가로 자신 필드의 앞면 표시 몬스터 1장을 고르고 표시 형식을 변경할 수 있다.
   zh-TW:
