--- a/data/rush/17015.yaml
+++ b/data/rush/17015.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon 1 "Printing Presser" from your Graveyard face-up to your field. The monster Special Summoned by this effect cannot attack directly this turn.
+    Special Summon 1 "Printing Presser" from your Graveyard face-up to your field, but it cannot attack directly this turn.
   de:
   es:
   fr:
