--- a/data/rush/17710.yaml
+++ b/data/rush/17710.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon 1 "Dark Skeleton Dead Ruler" or 1 "Wicked Shadow Dark Lurker" from your hand or your Graveyard face-up to your field. Switch the original ATK and DEF of the monster Special Summoned by this effect until the end of this turn.
+    Special Summon 1 "Dark Skeleton Dead Ruler" or 1 "Wicked Shadow Dark Lurker" from your hand or your Graveyard face-up to your field. Switch its original ATK and DEF until the end of this turn.
   de:
   es:
   fr:
