--- a/data/rush/18641.yaml
+++ b/data/rush/18641.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon 1 DARK Attribute Galaxy Type monster from your Graveyard to your field in face-up Attack Position. The monster Special Summoned by this effect loses 500 ATK until the end of this turn.
+    Special Summon 1 DARK Attribute Galaxy Type monster from your Graveyard to your field in face-up Attack Position. It loses 500 ATK until the end of this turn.
   de:
   es:
   fr:
