--- a/data/rush/18896.yaml
+++ b/data/rush/18896.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    Equip this card to 1 face-up Warrior Type monster on either field.
+    Equip this card to 1 face-up Warrior Type monster on the field.
   de:
   es:
   fr:
