--- a/data/rush/18986.yaml
+++ b/data/rush/18986.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    Shuffle 1 monster from your Graveyard into the Deck, and equip this card to 1 face-up monster on your field.
+    Shuffle 1 monster from your Graveyard into the Deck and equip this card to 1 face-up monster on your field.
   de:
   es:
   fr:
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    The equipped monster cannot be destroyed by your opponent's card effects. Then, if you have an Equip Spell Card in your Graveyard, the equipped monster gains 300 ATK.
+    The equipped monster cannot be destroyed by your opponent's card effects. Also, if you have an Equip Spell Card in your Graveyard, the equipped monster gains 300 ATK.
   de:
   es:
   fr:
