--- a/data/rush/19440.yaml
+++ b/data/rush/19440.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 19440
 name:
   en: Red Archery Girl
   de:
@@ -21,7 +21,7 @@ text:
   it:
   pt:
   ja: |-
-    普段は貝殼の中に身を隠し、近づく者に矢を放つマーメイド。
+    普段は貝殻の中に身を隠し、近づく者に矢を放つマーメイド。
   ko:
   zh-TW:
   zh-CN:
