--- a/data/cards/65570596.yaml
+++ b/data/cards/65570596.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Uma sereia arqueira que se esconde na sua concha protetora, esperando pelo momento certo para atacar.
   ja: |-
-    普段は貝殼の中に身を隠し、近づく者に矢を放つマーメイド。
+    普段は貝殻の中に身を隠し、近づく者に矢を放つマーメイド。
   ko: |-
     평소에는 껍질 속에 몸을 숨기고 있다가, 접근하는 자에게 화살을 쏘는 인어.
   zh-TW:
