--- a/rush.yaml
+++ b/rush.yaml
@@ -120326,6 +120326,215 @@ yugipedia_page_id: 1004608
 ---
 konami_id:
 name:
+  en: Meteor Drake
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: メテオ・ドレイク
+  ja_romaji: Meteo Doreiku
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+summoning_condition:
+  en: |-
+    If you have no monsters on your field, you can Special Summon this card from your hand face-up to your field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    None
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Excavate the top 4 cards of your Deck. You can add 1 excavated "Meteor Dragon" or "Meteor Flare Fusion" to your hand. Place the remaining cards on the bottom of your Deck in any order.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Dragon / Effect
+attribute: EARTH
+level: 5
+atk: 1800
+def: 1000
+series:
+- Red-Eyes
+images:
+- index: 1
+  image: MeteorDrake-RDKP15-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP15-JP028
+    set_name: Red Reboot of Darkness
+    rarities:
+    - Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1004609
+---
+konami_id:
+name:
+  en: Meteor Black Mars Dragon
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: メテオ・ブラック・マーズドラゴン
+  ja_romaji: Meteo Burakku Māzu Doragon
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    If you have "Meteor Dragon" in your Graveyard, send the top card of your Deck to the Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Until the end of this turn, this card gains ATK equal to [the number of monsters in your Graveyard] x 200, and if it attacks a Defense Position monster, inflict piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference).
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Dragon / Fusion / Effect
+attribute: FIRE
+level: 8
+atk: 3500
+def: 2000
+materials:
+  en: |-
+    "Red-Eyes Black Dragon" + "Meteor Dragon"
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+series:
+- Red-Eyes
+images:
+- index: 1
+  image: MeteorBlackMarsDragon-RDKP15-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP15-JP048
+    set_name: Red Reboot of Darkness
+    rarities:
+    - Ultra Rare
+    - Secret Rare
+    - Over Rush Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1004610
+---
+konami_id:
+name:
+  en: Meteor Flare Fusion
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: メテオフレア・フュージョン
+  ja_romaji: Meteo Furea Fyūjon
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    None
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Fusion Summon by sending 2 monsters from your hand and/or field to the Graveyard as material, including "Red-Eyes Black Dragon", "Summoned Skull", or "Meteor Dragon". Then, if you Special Summoned a non-Effect Monster by this effect, you can destroy 1 card on your opponent's field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Spell
+property: Normal
+series:
+- Fusion
+- Red-Eyes
+images:
+- index: 1
+  image: MeteorFlareFusion-RDKP15-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP15-JP057
+    set_name: Red Reboot of Darkness
+    rarities:
+    - Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1004611
+---
+konami_id:
+name:
   en: Fish Depth Charge
   de:
   es:
@@ -122305,3 +122514,79 @@ is_translation_unofficial:
   text:
     en: true
 yugipedia_page_id: 1022812
+---
+konami_id:
+name:
+  en: Red-Eyes Moon Dragon
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: 真紅眼の月竜
+  ja_romaji:
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+summoning_condition:
+  en: |-
+    This card's name becomes "Red-Eyes Black Dragon" while in the hand.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    None
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect_types:
+- Continuous
+effect:
+  en: |-
+    If this card is used as material for a Fusion Summon, its name becomes "Red-Eyes Black Dragon".
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Dragon / Effect
+attribute: DARK
+level: 4
+atk: 1200
+def: 1200
+series:
+- Red-Eyes
+images:
+- index: 1
+  image: RedEyesMoonDragon-RDKP15-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP15-JP025
+    set_name: Red Reboot of Darkness
+    rarities:
+    - Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1022920
