--- a/data/cards/35405755.yaml
+++ b/data/cards/35405755.yaml
@@ -49,6 +49,10 @@ sets:
     rarities:
     - Secret Rare
     - Starlight Rare
+  - set_number: OP23-EN001
+    set_name: OTS Tournament Pack 23
+    rarities:
+    - Ultimate Rare
   de:
   - set_number: POTE-DE031
     set_name: Power of the Elements
