--- a/data/cards/kdb11927.yaml
+++ b/data/cards/kdb11927.yaml
@@ -12,7 +12,7 @@ name:
   ko: 라의 익신룡－구체형
   ko_rr: Ra-ui Iksinnyong - Guchehyeong
   zh-TW:
-  zh-CN: 拉之翼神龙-球体形
+  zh-CN: 拉之翼神龙－球体形
 text:
   en: |-
     Cannot be Special Summoned. Requires 3 Tributes from either side of the field to Normal Summon to that side of the field (cannot be Normal Set), then shift control to this card's owner during the End Phase of the next turn. Cannot attack. Your opponent cannot target this card for attacks or by card effects. You can Tribute this card; Special Summon 1 "The Winged Dragon of Ra" from your hand or Deck, ignoring its Summoning conditions, and if you do, its ATK/DEF become 4000.
