--- a/data/cards/yugipedia1022878.yaml
+++ b/data/cards/yugipedia1022878.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    During your Main Phase, if this card was Normal or Special Summoned this turn: You can target 1 "Raidraptor" monster you control; add 1 "Raidraptor" monster with a different Level from your Deck to your hand. You can banish this card from your GY; increase or decrease the Levels of all "Raidraptor" monsters you currently control by 1 until the end of this turn. You can only use each effect of "Raidraptor - Noir Lanius" once per turn.
+    During your Main Phase, if this card was Normal or Special Summoned this turn: You can target 1 "Raidraptor" monster you control; add 1 "Raidraptor" monster with a different Level from your Deck to your hand. You can banish this card from your GY; increase or decrease the Levels of all "Raidraptor" monsters you currently control by 1. You can only use each effect of "Raidraptor - Noir Lanius" once per turn.
   de:
   es:
   fr:
