--- a/data/cards/yugipedia1022902.yaml
+++ b/data/cards/yugipedia1022902.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    If you control a "Raidraptor" monster: Target 1 face-up monster your opponent controls, or, if you control a "Raidraptor" Xyz Monster, you can target 1 face-up card your opponent controls instead; negate its effects until the end of this turn. You can banish this card from your GY, then target 1 of your "Raidraptor" monsters that is banished or in your GY; add it to your hand. You can only use 1 "Raidraptor - Barrage" effect per turn, and only once that turn.
+    If you control a "Raidraptor" monster: Target 1 face-up monster your opponent controls, or, if you control a "Raidraptor" Xyz Monster, you can target 1 face-up card they control instead; negate its effects until the end of this turn. You can banish this card from your GY, then target 1 of your "Raidraptor" monsters that is banished or in your GY; add it to your hand. You can only use 1 "Raidraptor - Barrage" effect per turn, and only once that turn.
   de:
   es:
   fr:
