--- a/data/rush/yugipedia1004611.yaml
+++ b/data/rush/yugipedia1004611.yaml
@@ -20,13 +20,14 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    「真紅眼の黒竜」「デーモンの召喚」「メテオ・ドラゴン」のいずれかを含む自分の手札・フィールドのモンスター２体を素材として墓地へ送り、フュージョン召喚する。この効果で効果モンスター以外のモンスターを特殊召喚した場合、さらに相手フィールドのカード１枚を選んで破壊できる。
   ko:
   zh-TW:
   zh-CN:
 effect:
   en: |-
-    Fusion Summon by sending 2 monsters from your hand and/or field to the Graveyard as material, including "Red-Eyes Black Dragon", "Summoned Skull", or "Meteor Dragon". Then, if you Special Summoned a non-Effect Monster by this effect, you can destroy 1 card on your opponent's field.
+    Fusion Summon by sending 2 monsters from your hand and/or field to the Graveyard as material, including "Red-Eyes Black Dragon"/"Summoned Skull"/"Meteor Dragon". Then, if you Special Summoned a non-Effect Monster by this effect, you can destroy 1 card on your opponent's field.
   de:
   es:
   fr:
