--- a/data/cards/81470373.yaml
+++ b/data/cards/81470373.yaml
@@ -12,7 +12,7 @@ name:
   ko: <ruby>BF<rt>블랙 페더</rt></ruby>－독풍의 시문
   ko_rr: Beullaek Pedeo - Dokpung-ui Simun
   zh-TW:
-  zh-CN: 黑羽-毒风之砂蒙
+  zh-CN: 黑羽－毒风之砂蒙
 text:
   en: |-
     If you control no monsters and have this card in your hand: You can banish 1 other "Blackwing" monster from your hand; place 1 "Black Whirlwind" from your Deck face-up in your Spell & Trap Zone, then, either send this card to the GY, or immediately after this effect resolves, Normal Summon it without Tributing. You cannot Special Summon monsters from the Extra Deck for the rest of this turn, except DARK monsters. You can only use this effect of "Blackwing - Simoon the Poison Wind" once per turn. During the End Phase, send the "Black Whirlwind" placed by this effect to the GY, and if you do, take 1000 damage.
