--- a/data/cards/yugipedia1022895.yaml
+++ b/data/cards/yugipedia1022895.yaml
@@ -16,8 +16,8 @@ name:
 text:
   en: |-
     2 Level 5 monsters
-    You can detach 1 material from this card; Set 1 "Raidraptor" Spell/Trap directly from your Deck. If this card has a Winged Beast monster as material: You can detach 1 material from this card; add 1 "Rank-Up-Magic" Spell from your Deck to your hand. You can only use 1 of the preceding effects of "Raidraptor - Brave Strix" per turn, and only once that turn. A "Raidraptor" Xyz Monster that has this card as material gains this effect.
-    ● This card gains ATK equal to its Rank x 100.
+    You can detach 1 material from this card; Set 1 "Raidraptor" Spell/Trap directly from your Deck. If this card has a Winged Beast monster as material: You can detach 1 material from this card; add 1 "Rank-Up-Magic" Spell from your Deck to your hand. You can only use 1 of the previous effects of "Raidraptor - Brave Strix" per turn, and only once that turn. A "Raidraptor" Xyz Monster that has this card as material gains this effect.
+    ● Gains ATK equal to its Rank x 100.
   de:
   es:
   fr:
@@ -33,6 +33,7 @@ attribute: DARK
 rank: 5
 atk: 2000
 def: 2500
+materials: 2 Level 5 monsters
 series:
 - Raidraptor
 images:
