--- a/data/rush/yugipedia1004610.yaml
+++ b/data/rush/yugipedia1004610.yaml
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分の墓地に「メテオ・ドラゴン」がいる場合、デッキの一番上のカードを墓地へ送って発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカードの攻撃力はターン終了時まで、［自分の墓地のモンスターの数］×２００アップし、その攻撃は貫通する。
   ko:
   zh-TW:
   zh-CN:
@@ -50,7 +52,8 @@ materials:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    「真紅眼の黒竜」＋「メテオ・ドラゴン」
   ko:
   zh-TW:
   zh-CN:
