--- a/rush.yaml
+++ b/rush.yaml
@@ -120598,6 +120598,68 @@ yugipedia_page_id: 1004612
 ---
 konami_id:
 name:
+  en: Planting Pixie
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: プランティングピクシー
+  ja_romaji: Purantingu Pikushī
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    2 or more face-up monsters with the same Attribute are on the field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Add 1 Level 6 or lower Normal Monster or 1 "Fusion" from your Graveyard to your hand. Then, you can Special Summon 1 EARTH Attribute Plant Type monster from your hand face-up to your field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Plant / Effect
+attribute: EARTH
+level: 2
+atk: 800
+def: 1200
+images:
+- index: 1
+  image: PlantingPixie-RDKP15-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP15-JP029
+    set_name: Red Reboot of Darkness
+    rarities:
+    - Ultra Rare
+    - Secret Rare
+    - Over Rush Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1004613
+---
+konami_id:
+name:
   en: Glacies the Snowmeister of Sacred Splendor
   de:
   es:
@@ -123006,3 +123068,65 @@ is_translation_unofficial:
   text:
     en: true
 yugipedia_page_id: 1022943
+---
+konami_id:
+name:
+  en: Infernal Kappa River Sprinter
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>地獄<rt>ヘル</rt></ruby><ruby>河<rt>かっ</rt></ruby><ruby>童<rt>ぱ</rt></ruby>リバースプリンター
+  ja_romaji: Heru Kappa Ribāsupurintā
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Send 1 "Kappa Emperor River Slider", "Infernal Kappa Diwet", or "Kappa's Gas" from your hand to the Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Destroy 1 card on your opponent's field. Then, if you have 3 or more Aqua Type monsters in your Graveyard, you can draw 1 card.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Aqua / Effect
+attribute: WATER
+level: 7
+atk: 2100
+def: 2600
+series:
+- Kappa
+images:
+- index: 1
+  image: InfernalKappaRiverSprinter-RDKP15-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP15-JP023
+    set_name: Red Reboot of Darkness
+    rarities:
+    - Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1022993
