--- a/rush.yaml
+++ b/rush.yaml
@@ -120618,7 +120618,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    お互いのフィールドの全ての表側表示モンスターの中に、同じ属性のモンスターが２体以上いる場合に発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -120630,7 +120631,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分の墓地の通常モンスター（レベル６以下）１体または「フュージョン」１枚を選んで手札に加える。その後、手札のモンスター（地属性／植物族）１体を自分フィールドに表側表示で特殊召喚できる。
   ko:
   zh-TW:
   zh-CN:
@@ -123085,13 +123087,14 @@ name:
   zh-CN:
 requirement:
   en: |-
-    Send 1 "Kappa Emperor River Slider", "Infernal Kappa Diwet", or "Kappa's Gas" from your hand to the Graveyard.
+    Send 1 "Kappa Emperor River Slider"/"Infernal Kappa Diwet"/"Kappa's Gas" from your hand to the Graveyard.
   de:
   es:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    手札から「河童大帝リバースライダー」「地獄河童ダイウェット」「へのかっぱ」のいずれか１枚を墓地へ送って発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -123103,7 +123106,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    相手フィールドのカード１枚を選んで破壊する。その後、自分の墓地にモンスター（水族）が３体以上いる場合、自分は１枚ドローできる。
   ko:
   zh-TW:
   zh-CN:
