--- a/data/rush/16886.yaml
+++ b/data/rush/16886.yaml
@@ -31,7 +31,7 @@ effect_types:
 effect:
   en: |-
     ● Destroy 1 face-down card on your opponent's field.
-    ● 1 face-up Cyborg Type monster on your field gains ATK equal to [the total ATK of all face-up Warrior Type monsters on your opponent's field] until the end of this turn.
+    ● 1 face-up Cyborg Type monster on your field gains ATK equal to [the total ATK of face-up Warrior Type monsters on your opponent's field] until the end of this turn.
   de:
   es:
   fr:
