--- a/rush.yaml
+++ b/rush.yaml
@@ -43505,7 +43505,7 @@ effect_types:
 effect:
   en: |-
     ● Destroy 1 face-down card on your opponent's field.
-    ● 1 face-up Cyborg Type monster on your field gains ATK equal to [the total ATK of all face-up Warrior Type monsters on your opponent's field] until the end of this turn.
+    ● 1 face-up Cyborg Type monster on your field gains ATK equal to [the total ATK of face-up Warrior Type monsters on your opponent's field] until the end of this turn.
   de:
   es:
   fr:
@@ -69746,7 +69746,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Take damage equal to [the total ATK of all face-up Level 8 or lower monsters on your opponent's field]. Then, if you took damage by this effect, destroy all face-up Level 8 or lower monsters on your opponent's field.
+    Take damage equal to [the total ATK of face-up Level 8 or lower monsters on your opponent's field]. Then, if you took damage by this effect, destroy all face-up Level 8 or lower monsters on your opponent's field.
   de:
   es:
   fr:
@@ -120559,7 +120559,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    (TBA)
+    When your opponent Normal or Special Summons a monster, or after your opponent activates a Spell Card, send 1 face-up Fish Type monster from your field to the Graveyard.
   de:
   es:
   fr:
@@ -120571,7 +120571,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    (TBA)
+    Destroy 1 card on your opponent's field. Then, draw 1 card.
   de:
   es:
   fr:
@@ -120585,12 +120585,13 @@ card_type: Trap
 property: Normal
 images:
 - index: 1
-  image: FishDepthCharge-OW.png
+  image: FishDepthCharge-RDKP15-JP-OP.png
 sets:
   ja:
-  - set_number: RD/KP15-JP0??
+  - set_number: RD/KP15-JP062
     set_name: Red Reboot of Darkness
     rarities:
+    - Rare
 is_translation_unofficial:
   text:
     en: true
@@ -123134,3 +123135,189 @@ is_translation_unofficial:
   text:
     en: true
 yugipedia_page_id: 1022993
+---
+konami_id:
+name:
+  en: Salvage
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ja_romaji:
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    None
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Add 2 WATER Attribute monsters with 1500 or less ATK from your Graveyard to your hand.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Spell
+property: Normal
+legend: true
+images:
+- index: 1
+  image: Salvage-RDKP15-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP15-JP056
+    set_name: Red Reboot of Darkness
+    rarities:
+    - Rare
+is_translation_unofficial:
+  text:
+    en: true
+yugipedia_page_id: 1023237
+---
+konami_id:
+name:
+  en: Cyber Shark
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ja_romaji:
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+summoning_condition:
+  en: |-
+    If you have a face-up WATER Attribute monster on your field, you can Normal Summon this card without Tributing.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    None
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    None
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Fish / Effect
+attribute: WATER
+level: 5
+atk: 2100
+def: 2000
+images:
+- index: 1
+  image: CyberShark-RDKP15-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP15-JP021
+    set_name: Red Reboot of Darkness
+    rarities:
+    - Super Rare
+    - Secret Rare
+is_translation_unofficial:
+  text:
+    en: true
+yugipedia_page_id: 1023238
+---
+konami_id:
+name:
+  en: Hydro Gun Mini Bluefin
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: 波導銃ミニ・マグロム
+  ja_romaji:
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Send the top card of your Deck to the Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    This card gains ATK equal to [the total Levels of the face-up Fish Type monsters on your field] x 100 until the end of this turn. Then, you can take 1 "Hydro Cannon Big Bluefin" from your Graveyard, and either add it to your hand or Special Summon it face-up to your field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Fish / Effect
+attribute: WATER
+level: 3
+atk: 1000
+def: 500
+images:
+- index: 1
+  image: HydroGunMiniBluefin-RDKP15-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP15-JP017
+    set_name: Red Reboot of Darkness
+    rarities:
+    - Common
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1023239
