--- a/data/rush/yugipedia1023239.yaml
+++ b/data/rush/yugipedia1023239.yaml
@@ -6,8 +6,8 @@ name:
   fr:
   it:
   pt:
-  ja: 波導銃ミニ・マグロム
-  ja_romaji:
+  ja: <ruby>波導銃<rt>ハイドロガン</rt></ruby>ミニ・マグロム
+  ja_romaji: Haidoro Gan Mini Maguromu
   ko:
   ko_rr:
   zh-TW:
